# cmake_player

./: .gitignore  CMakeLists.txt  README.md  demo_CMakeLists.txt  main.cpp
examples/: demo.cpp  main.cpp  matmul.cpp  matrix_add.cpp  matrix_trans.cpp  reduce.cpp  test.cpp  vector_add.cpp
include/: entity.h  log.h  matrix_add.h  matrix_helper.h  reduce.h  vector_add.h
kernels/: demo.cu  matmul.cu  matrix_add.cu  matrix_trans.cu  reduce.cu  softmax.cpp  test.cu  vector_add.cpp  vector_add.cu
